--- a/package.json
+++ b/package.json
@@ -1,32 +1,140 @@
+Clear Result
+Copy to clipboard
 {
-  "name": "ProvablyFairTRX",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "node server.js",
-    "build": "next dev"
+  
+"name"
+: 
+"ProvablyFairTRX"
+,
+  
+"version"
+: 
+"1.0.0"
+,
+  
+"description"
+: 
+""
+,
+  
+"main"
+: 
+"index.js"
+,
+  
+"start"
+: 
+"ng serve --host 0.0.0.0"
+,
+  
+"keywords"
+: [],
+  
+"author"
+: 
+""
+,
+  
+"license"
+: 
+"ISC"
+,
+  
+"scripts"
+: {
+    
+"test"
+: 
+"echo \"Error: no test specified\" && exit 1"
+,
+    
+"dev"
+: 
+"node server.js"
+,
+    
+"build"
+: 
+"next dev"
+
   },
-  "start": "ng serve --host 0.0.0.0",
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "@material-ui/core": "^3.8.3",
-    "@material-ui/icons": "^3.0.2",
-    "animated-number-react": "0.0.2",
-    "express": "^4.16.4",
-    "fs-extra": "^7.0.1",
-    "material-ui": "^0.20.2",
-    "next": "^7.0.2",
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0",
-    "socket.io": "^2.2.0",
-    "socket.io-client": "^2.2.0",
-    "solc": "^0.5.3",
-    "styled-jsx": "^3.1.3",
-    "tronbox": "^2.3.12",
-    "tronweb": "^2.1.31"
+  
+"dependencies"
+: {
+    
+"@material-ui/core"
+: 
+"^4.12.4"
+,
+    
+"@material-ui/icons"
+: 
+"^4.11.3"
+,
+    
+"animated-number-react"
+: 
+"^0.1.2"
+,
+    
+"express"
+: 
+"^4.18.1"
+,
+    
+"fs-extra"
+: 
+"^10.1.0"
+,
+    
+"material-ui"
+: 
+"^0.20.2"
+,
+    
+"next"
+: 
+"^12.3.1"
+,
+    
+"react"
+: 
+"^18.2.0"
+,
+    
+"react-dom"
+: 
+"^18.2.0"
+,
+    
+"socket.io"
+: 
+"^4.5.2"
+,
+    
+"socket.io-client"
+: 
+"^4.5.2"
+,
+    
+"solc"
+: 
+"^0.8.17"
+,
+    
+"styled-jsx"
+: 
+"^5.0.7"
+,
+    
+"tronbox"
+: 
+"^2.7.25"
+,
+    
+"tronweb"
+: 
+"^4.3.0"
+
   }
 }
